@@ -12,7 +12,9 @@ RUN ./gradlew --no-daemon build
 
 EXPOSE 8080
 
-CMD java -jar build/libs/app-0.0.1-SNAPSHOT.jar
+#CMD java -jar build/libs/app-0.0.1-SNAPSHOT.jar
+CMD ["java", "-XX:+EnableDynamicAgentLoading", "-jar", "build/libs/app-0.0.1-SNAPSHOT.jar"]
+
 
 FROM gradle:8.7-jdk21
 
